crates/engine/tests/ui/external_impl_rejected.stderr
error[E0277]: the trait bound `MyHandler: Sealed` is not satisfied
 --> tests/ui/external_impl_rejected.rs:8:32
  |
8 | impl CascadeHandler<Event> for MyHandler {
  |                                ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `GeneratedRule` is not implemented for `MyHandler`
 --> tests/ui/external_impl_rejected.rs:6:1
  |
6 | struct MyHandler;
  | ^^^^^^^^^^^^^^^^
help: the following other types implement trait `Sealed`
  |
 ::: src/view/materialized.rs
  |
  | impl crate::cascade::handler::__sealed::Sealed for DamageTaken {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `DamageTaken`
 --> src/view/topk.rs
  |
  | impl crate::cascade::handler::__sealed::Sealed for MostHostileTopK {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MostHostileTopK`
  |
 ::: src/view/lazy.rs
  |
  | impl crate::cascade::handler::__sealed::Sealed for NearestEnemyLazy {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NearestEnemyLazy`
  = note: required for `MyHandler` to implement `Sealed`
note: required by a bound in `CascadeHandler`
 --> src/cascade/handler.rs
  |
  | pub trait CascadeHandler<E: EventLike>: __sealed::Sealed + Send + Sync {
  |                                         ^^^^^^^^^^^^^^^^ required by this bound in `CascadeHandler`
